-*- outline -*-

This file documents user visible changes between versions of StumpWM

* Changes since 0.9.2
** define-stumpwm-command is deprecated
Use defcommand instead

** pull-window-by-number arguments are reversed

** renumber function's arguments are reversed

** C-h lists keybindings too
In any keymap C-h and ? will list the keybindings.

** New command bind
Hang a key binding off the escape key.

** C-t TAB changed to fnext
Maintain compatibility with the screen binding.

* Changes since 0.9.1
** key grab handling
top level key binding are now grabbed "asynchronously." This should
eliminate the keyboard freezes some have experiences.

** New command emacs

** AltGr modifier should be recognized now

** new command grename

* Changes since 0.0.6
These changes are probably incomplete

** added color codes to message windows.

** added XRandR dynamic rotate/resize support

** added external panel/dock support

** added fullscren support

** added new rat focus models

** Xinerama support

** support hidden groups

** added frame save and restore

** added rule based window placement

** stumpwm now handles window roles

** move-focus now uses a heuristic to find the 'best' frame to focus

** format-time-string
Now takes an optional format string as an argument!

** more netwm compliance
stumpwm now exports its groups as netwm desktops.

** new var *default-package*
This decides what package the eval command reads and executes things
in.

** new var *new-window-prefered-frame*
It controls what frame a new window appears in.

** "help" command prints bindings in columns
And it doesn't timeout.

** new variable *suppress-abort-messages*
Suppress abort message when non-nil.

** configure script
Now you can use it to select a lisp and point the makefile to the
location of your lisp.

** new command gmerge

** startup message configurable
with *startup-message*.

** format string arguments can be cropped